# ots

./: .gitignore  DEPLOYMENT.md  README.md  pyproject.toml
src/: apure.py  ots.py
src/ots/: main.py  pure.py
src/static/: style.css
src/templates/: base.html  index.html  preview.html  receive.html  share.html
tests/: conftest.py  test_main.py  test_ots.py  test_ots_integration.py
