[project]
name = "ots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["httpx>=0.28.1", "pytest-asyncio>=0.24.0", "pytest-cov>=6.0.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
